# syrillian

./: .gitignore  Cargo.toml  README.md
syrillian/: Cargo.toml
syrillian/examples/: bones.rs  my-main.rs  necoarc.rs  parenting_and_object_types.rs  pbr.rs  simple_transformations.rs
syrillian/examples/dynamic_shader/: main.rs
syrillian/src/: lib.rs  math.rs
syrillian/src/engine/: mod.rs  reflection.rs  world.rs
syrillian/src/utils/: animation.rs  color.rs  frame_counter.rs  iter.rs  math.rs  mod.rs  sizes.rs  typed_component_helpers.rs  uniform_traits.rs
syrillian/src/windowing/: app.rs  game_thread.rs  mod.rs  presenter.rs  render_thread.rs  state.rs
syrillian/tests/: asset_store.rs  component_parent.rs  components.rs  core_reflection.rs  reflection.rs  transform.rs  utils_math.rs  vertex.rs  viewport.rs  world.rs
syrillian_asset/: Cargo.toml
syrillian_asset/src/: lib.rs  reflection.rs
syrillian_asset/src/assets/: animation_clip.rs  bind_group_layout.rs  compute_shader.rs  cubemap.rs  material.rs  material_inputs.rs  material_instance.rs  mod.rs  prefab.rs  render_cubemap.rs  render_texture_2d.rs  render_texture_2d_array.rs  sound.rs  texture_2d.rs  texture_2d_array.rs
syrillian_asset/src/assets/font/: mod.rs
syrillian_asset/src/assets/mesh/: bone.rs  buffer.rs  builder.rs  generic_vertex.rs  mod.rs  simple_vertex.rs  skinned_static_mesh.rs  skinned_vertex.rs  static_mesh.rs  static_mesh_data.rs  unskinned_vertex.rs  vertex.rs
syrillian_asset/src/assets/shader/: checks.rs  defaults.rs  immediates.rs  mod.rs
syrillian_asset/src/assets/shader/shaders/: fallback_shader3d.wgsl  mod.rs  particle_system_render.wgsl  picking_mesh.wgsl  picking_ui.wgsl  shader2d.wgsl  text3d.wgsl  text3d_shadow.wgsl
syrillian_asset/src/assets/shader/shaders/compute/: mesh_skinning.wgsl  ssao_blur_compute.wgsl  ssao_post_process_compute.wgsl
syrillian_asset/src/assets/shader/shaders/debug/: edges.wgsl  light.wgsl  text2d_geometry.wgsl  text3d_geometry.wgsl  vertex_normals.wgsl
syrillian_asset/src/store/: asset_store.rs  generic_store.rs  handle.rs  key.rs  mod.rs  packaged_scene.rs  streaming.rs  streaming_asset_store.rs  streaming_error.rs
syrillian_asset/src/store/streaming/: asset_store.rs  decode.rs  decode_helper.rs  error.rs  mod.rs  packaged_scene.rs  payload.rs
syrillian_components/: Cargo.toml
syrillian_components/src/: animation.rs  audio.rs  button.rs  collider.rs  extensions.rs  flashlight.rs  fp_camera.rs  fp_movement.rs  freecam.rs  gravity.rs  image.rs  joints.rs  lib.rs  light.rs  mesh_renderer.rs  panel.rs  particle_system.rs  profiler.rs  rigid_body.rs  rotate.rs  skeletal.rs  skinned_mesh_renderer.rs  third_person_controller.rs  ui_rect.rs
syrillian_components/src/prefabs/: cube.rs  sphere.rs  sun.rs
syrillian_components/src/proxy/: mod.rs
syrillian_components/src/text/: mod.rs
syrillian_components/tests/: joint.rs
syrillian_examples/: Cargo.toml
syrillian_examples/examples/: bones.rs  my-main.rs  necoarc.rs  pbr.rs  simple_transformations.rs
syrillian_examples/examples/dynamic_shader/: main.rs
syrillian_macros/src/: lib.rs
syrillian_reflect/: Cargo.toml
syrillian_reflect/src/: impl_glam.rs  impl_primitive.rs  lib.rs  macros.rs  serialize_primitive.rs  serialize_std.rs  serializer.rs
syrillian_render/: Cargo.toml
syrillian_render/src/: error.rs  lib.rs  model_uniform.rs
syrillian_render/src/cache/: asset_cache.rs  bind_group_layout.rs  generic_cache.rs  material.rs  mesh.rs  mod.rs
syrillian_render/src/lighting/: manager.rs  proxy.rs
syrillian_render/src/passes/: mod.rs  pipeline.rs  ui_pass.rs
syrillian_render/src/proxies/: debug_proxy.rs  mesh_proxy.rs  mod.rs  skinned_mesh_proxy.rs  text_proxy.rs
syrillian_render/src/rendering/: context.rs  debug_renderer.rs  message.rs  mod.rs  offscreen_surface.rs  picking.rs  (+6 more)
syrillian_scene/: Cargo.toml
syrillian_scene/src/: bones.rs  gltf_loader.rs  lib.rs  meshes.rs  prefab_material_instantiation.rs  scene_loader.rs  scene_saver.rs  textures.rs  utils.rs
syrillian_scene/src/gltf/: animations.rs  bones.rs  loader.rs  materials.rs  meshes.rs  mod.rs  prefabs.rs  scene.rs  textures.rs
syrillian_scene/tests/: scene_loader.rs  scene_loader_package_regression.rs
syrillian_shadergen/: Cargo.toml
syrillian_shadergen/src/: chunks.rs  compiler.rs  function.rs  generator.rs  lib.rs  value.rs
syrillian_shadergen/src/functions/: default_vertex_post.wgsl  fallback_shader3d.wgsl  fullscreen_passthrough.wgsl  pbr_mesh3d.wgsl  vertex_mesh3d.wgsl  vertex_mesh3d_bones.wgsl  vertex_mesh3d_position_only.wgsl  vertex_postprocess_quad.wgsl
syrillian_shadergen/src/functions/helpers/: math.wgsl  skinning.wgsl
syrillian_shadergen/src/groups/: light.wgsl  material.wgsl  material_textures.wgsl  mesh3d.wgsl  mesh3d_position_only.wgsl  model.wgsl
syrillian_shadergen/tests/: material_binding.rs  math.rs  post_process.rs
syrillian_utils/: Cargo.toml
syrillian_utils/src/: bounds.rs  color.rs  component_id.rs  engine_args.rs  frustum.rs  lib.rs  logging.rs  math.rs  sizes.rs
(+129 files in other folders)
