[package]
name = "syrillian_shadergen"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
wgpu.workspace = true
syrillian_utils.workspace = true
glamx.workspace = true
uuid = { version = "1.20", features = ["v4"] }
typed-arena = "2.0"