[package]
name = "syrillian_utils"
description = "Utilities used by the Syrillian game engine"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
wgpu.workspace = true
glamx.workspace = true
tracing = "0.1"
argh = "0.1"