[package]
name = "syrillian_utils"
description = "Utilities used by the Syrillian game engine"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
wgpu.workspace = true
glamx.workspace = true
tracing.workspace = true
static_assertions.workspace = true
argh = "0.1"
slotmap.workspace = true
